# axiom-ops

./: .gitignore  README.md  __init__.py  pyproject.toml
src/axiom/: __init__.py
src/axiom/clients/: __init__.py
src/axiom/clients/google_drive/: __init__.py  google_drive_client.py
src/axiom/clients/google_sheets/: __init__.py  google_sheets_client.py
src/axiom/clients/hubspot/: __init__.py  hubspot_client.py
src/axiom/clients/places_api/: __init__.py  places_api_client.py
src/axiom/clients/sharepoint/: __init__.py  sharepoint_client.py
src/axiom/clients/survey123/: __init__.py  survey123_client.py
src/axiom/config/: __init__.py  default_settings.py  parse_environment_variables.py  settings.py  settings_options.py  settings_validators.py
src/axiom/data_transformations/: dummy.py
src/axiom/logging/: core.py  utilities.py
src/axiom/utilities/core/: singleton.py
tests/test_config/: test_settings.py
