[tool.poetry]
name = "your_library_name"
version = "0.1.0"
description = "A utility library for internal use"
readme = "README.md"
authors = ["Your Name <your.email@company.com>"]
license = "MIT"
repository = "https://github.com/your-company/your_library_name"
documentation = "https://your_library_name.readthedocs.io"
packages = [
    { include = "axiom", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.10"

[tool.poetry.dev-dependencies]
pytest = ">=6.0"
black = ">=20.8b1"
isort = ">=5.7.0"
mypy = ">=0.812"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py37"]

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.7"
strict = true
